# lobe

./: .gitignore  BENCHMARKS.md  CLAUDE.md  README.md  experiments.tsv  mkdocs.yml  pyproject.toml  training_repo_setup.md
.claude/: diffusion-vs-flow-matching.md  implementation-plan.md  settings.json
.claude/commands/: add-method.md  eval.md  lint.md  research.md  serve.md  train.md
docs/: architecture.md  benchmarks.md  index.md  lessons_pi05_vs_lobe.md  openpi_pipeline_full.md  quickstart.md
docs/milestones/: yam_multibackbone.md
docs/policies/: adding.md  builtin.md  flow_matching.md
docs/reference/: cli.md  config.md  patches.md
docs/roadmap/: post_v1_methods.md  simvla.md  v1.2.md  xvla.md
docs/workflows/: evaluation.md  serving.md  training.md  xvla_finetune.md  yam_finetune.md
lerobot_policy_flow_matching/: __init__.py
lerobot_policy_xvla/: __init__.py
lobe/: __init__.py  cli.py  client.py  configs.py  experiment_log.py  patches.py  pusht.py  serve.py  video_compat.py
lobe/configs/: __init__.py  aloha.py  base.py  libero.py  pusht.py  yam.py
lobe/data/: __init__.py  fast_dataset.py  loading.py  preload.py
lobe/datasets/: __init__.py  fast_lerobot_dataset.py
lobe/envs/: __init__.py  aloha.py  libero.py  pusht.py  yam_bimanual.py
lobe/policies/: __init__.py  diffusion_wrapper.py  factory.py  normalize.py
lobe/policies/flow_matching/: __init__.py  configuration_flow_matching.py  flow_transformer.py  modeling_flow_matching.py  processor_flow_matching.py  vision_encoder.py
lobe/policies/xvla/: __init__.py  configuration_xvla.py  libero_v3_processors.py  libero_xvla_adapter.py  processor_xvla.py
outputs/eval/2026-03-25/17-20-45_pusht_smolvla/: eval_info.json
scripts/: _lerobot_train_entry.py  _lobe_train_entry.py  bench_inference.py  benchmark_pusht.py  build_libero_abs_dataset.py  build_libero_xvla_dataset.py  compute_chunked_delta_stats.py  convert_libero_rel2abs.py  convert_v3_to_v21.py  convert_video_to_image.py  convert_yam_video_to_image.py  eval_pusht.py  eval_pusht_web.py  eval_replay.py  inspect_dataset.py  prepare_dataset.py  sweep_pusht.py  test_serve_all.py  train.py  train_pusht.py  train_vla.py  train_yam.py  validate_fm.py  validate_yam_dataset.py
tests/: test_flow_matching.py
