[project]
name = "lobe"
version = "0.1.0"
description = "Policy training and serving for limb robot control"
requires-python = ">=3.11,<3.12"
dependencies = [
    "lerobot[pi,xvla,wallx]",
    "huggingface-hub",
    "wandb",
    "tyro>=1.0.8",
    "loguru>=0.7.3",
    "torch>=2.7",
    "torchvision>=0.22",
]

[project.optional-dependencies]
serve = [
    "websockets",
    "msgpack",
    "msgpack-numpy",
]
ot = [
    "torchcfm",
]
eval = [
    "gym-pusht",
    "pymunk<7",
    "pygame",
    "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
triton = { index = "pytorch-nightly" }
torchcodec = { index = "pypi" }

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
